; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrddim.c_rrddim_unhide.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrddim.c_rrddim_unhide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@D_RRD_CALLS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"rrddim_unhide() for chart %s, dimension %s\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"Cannot find dimension with id '%s' on stats '%s' (%s) on host '%s'.\00", align 1
@RRDDIM_FLAG_HIDDEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rrddim_unhide(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32, i32* @D_RRD_CALLS, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @debug(i32 %8, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %12)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 2
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  store %struct.TYPE_6__* %16, %struct.TYPE_6__** %6, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32* @rrddim_find(%struct.TYPE_5__* %17, i8* %18)
  store i32* %19, i32** %7, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = icmp ne i32* %20, null
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %38

26:                                               ; preds = %2
  %27 = load i8*, i8** %5, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @error(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0), i8* %27, i8* %30, i32 %33, i32 %36)
  store i32 1, i32* %3, align 4
  br label %42

38:                                               ; preds = %2
  %39 = load i32*, i32** %7, align 8
  %40 = load i32, i32* @RRDDIM_FLAG_HIDDEN, align 4
  %41 = call i32 @rrddim_flag_clear(i32* %39, i32 %40)
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %38, %26
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @debug(i32, i8*, i8*, i8*) #1

declare dso_local i32* @rrddim_find(%struct.TYPE_5__*, i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @error(i8*, i8*, i8*, i32, i32) #1

declare dso_local i32 @rrddim_flag_clear(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
